--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 					
 					<li class="main-header__item"><a class="main-header__link anim" href="#">Харчування</a></li>
 					<li class="main-header__item"><a class="main-header__link anim" href="#">Краса</a></li>
-					<li class="main-header__item"><a class="main-header__link anim" href="#">Лайфхаки</a></li>
+					<li class="main-header__item"><a class="main-header__link anim" href="https://mturych.github.io/blog-progress/">Лайфхаки</a></li>
 					<li class="main-header__item"><a class="main-header__link anim" href="#">English</a></li>
-					<li class="main-header__item"><a class="main-header__link anim" href="#">Книги</a></li>
+					<li class="main-header__item"><a class="main-header__link anim" href="https://mturych.github.io/blog-progress/">Книги</a></li>
 				</ul>
 			</div>
 			</div>
